# rock-paper-scissors

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: colored.rs  configurable.rs  interactive.rs  loop.rs  sim.rs
src/: lib.rs  main.rs
tests/: test-game-settings.rs  test-move-type.rs  test-player-moves.rs  test-scores.rs  test-winner.rs  test_game_settings.rs  test_move_type.rs
