[package]
name = "rock-paper-scissors"
license = "MIT"
version = "0.2.2"
edition = "2021"
documentation = "https://docs.rs/rock-paper-scissors/0.2.2/rock_paper_scissors/"
description = "rock-paper-scissors is an open-source Rust game API that allows users to create custom implementations of the classic game 'Rock, Paper, Scissors'."

[dependencies]
rand = "0.9.0"
